# tech-support-assistant

./: .env  .env.example  Makefile  README.md  SETUP.md  __init__.py  __main__.py  agent.py  app.py  cli.py  cli_run.py  docker-compose.yml  embedding.py  logger.py  prompt.txt  pyproject.toml  rag.py  streamlit_app.py  web_app.py
