[project]
name = "tech-support"
version = "0.1.0"
description = "AI-powered technical support assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "chromadb>=1.3.5",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.52.1",
    "textual>=6.7.1",
    "textual-web>=0.4.2",
    "flask>=3.0.0",
]

[project.scripts]
support = "tech_support.cli_run:main"
ingest = "tech_support.__main__:ingest"
clear = "tech_support.__main__:clear_collection"
info = "tech_support.__main__:info"
search = "tech_support.__main__:search"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
